@@ -2,6 +2,7 @@ Version 5.5.0   unreleased
 
     * Fix isEnabled() and setEnabled() on the UTCTimeBox and UTCDateBox widgets.
     * Add new method AbstractWidgetUtils.getWidget().
+    * Add new method AbstractWidgetUtils.getCodeserver().
     * Add new method AbstractWidgetUtils.setFocusAfterDisplay(Focusable)
     * Add setFocus() methods on AbstractWidgetUtils as aliases for setFocusOnDiplay().
 
